Dump picture data to SDL
Former-commit-id: 5f6ebceb9e632d3e5505edbc0a2844b94673867b

--- a/Avc/Makefile
+++ b/Avc/Makefile
@@ -19,7 +19,7 @@ OBJS    = $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(SRCS))
 
 # Targets
 $(PROJECT): build-dirs $(OBJS)
-	$(CC) $(LDFLAGS) $(OBJS) $(LIBS) -o $@
+	$(CC) $(LDFLAGS) $(OBJS) $(LIBS) -lSDL -o $@
 
 # $(OBJDIR)/SDLMain.o: SDLMain.m
 #	$(CC) $(OPTS) -c $< -o $@
