--- a/Avc/Makefile
+++ b/Avc/Makefile
@@ -1,8 +1,7 @@
 # Compiler
 CC = g++
-OPTS = -m32 -c -g -Wall -DOSCL_IMPORT_REF= -DOSCL_UNUSED_ARG= -DOSCL_EXPORT_REF=
+OPTS = -m32 -g -Wall -DOSCL_IMPORT_REF= -DOSCL_UNUSED_ARG= -DOSCL_EXPORT_REF=
 LDFLAGS = -m32 
-
 # Project name
 PROJECT = avc
 
@@ -11,18 +10,18 @@ OBJDIR = obj
 SRCDIR = .
 
 # Libraries
-LIBS = 
+LIBS =  -framework Cocoa -framework SDL
 
 # Files and folders
 SRCS    = $(shell find $(SRCDIR) -name '*.cpp')
 OBJS    = $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(SRCS))
 
 # Targets
-$(PROJECT): build-dirs $(OBJS)
-	$(CC) $(LDFLAGS) $(OBJS) $(LIBS) -o $@
+$(PROJECT): build-dirs $(OBJS) $(OBJDIR)/SDLMain.o
+	$(CC) $(LDFLAGS) $(OBJS) $(OBJDIR)/SDLMain.o $(LIBS) -o $@
 
-# $(OBJDIR)/SDLMain.o: SDLMain.m
-#	$(CC) $(OPTS) -c $< -o $@
+$(OBJDIR)/SDLMain.o: SDLMain.m
+	$(CC) $(OPTS) -c $< -o $@
 	
 $(OBJDIR)/%.o: $(SRCDIR)/%.cpp
 	$(CC) $(OPTS) -c $< -o $@
