Fix Linux build
Former-commit-id: 5251279fcce8a75c018e448baa00293e1af331f9

--- a/Avc/Makefile
+++ b/Avc/Makefile
@@ -1,5 +1,9 @@
 # Compiler
 OPTS = -m32 -g -Wall -DOSCL_IMPORT_REF= -DOSCL_UNUSED_ARG= -DOSCL_EXPORT_REF=
+ifeq ($(LINUX),1)
+OPTS += -DLINUX
+endif
+
 LDFLAGS = -m32 
 # Project name
 PROJECT = avc
@@ -9,18 +13,30 @@ OBJDIR = obj
 SRCDIR = .
 
 # Libraries
+ifeq ($(LINUX),1)
+LIBS = -lSDL
+else
 LIBS =  -framework Cocoa -framework SDL
+endif
 
 # Files and folders
 SRCS    = $(shell find $(SRCDIR) -name '*.cpp')
 OBJS    = $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(SRCS))
 
 # Targets
+ifeq ($(LINUX),1)
+$(PROJECT): build-dirs $(OBJS)
+	$(CC) $(LDFLAGS) $(OBJS) $(LIBS) -o $@
+
+$(OBJDIR)/SDLMain.o: SDLMain.m
+	$(CC) $(OPTS) -c $< -o $@
+else
 $(PROJECT): build-dirs $(OBJS) $(OBJDIR)/SDLMain.o
 	$(CC) $(LDFLAGS) $(OBJS) $(OBJDIR)/SDLMain.o $(LIBS) -o $@
 
 $(OBJDIR)/SDLMain.o: SDLMain.m
 	$(CC) $(OPTS) -c $< -o $@
+endif
 	
 $(OBJDIR)/%.o: $(SRCDIR)/%.cpp
 	$(CC) $(OPTS) -c $< -o $@
