Screen drawing optimizations.
Former-commit-id: 8a1d4f111ee16adb13c94404691b0414d3d63b5d

--- a/Avc/Makefile
+++ b/Avc/Makefile
@@ -1,5 +1,6 @@
-# Compiler
-OPTS = -m32 -g -Wall -DOSCL_IMPORT_REF= -DOSCL_UNUSED_ARG= -DOSCL_EXPORT_REF=
+# Compiler 
+# -DMB_BASED_DEBLOCK -DUSE_PRED_BLOCK
+OPTS = -m32 -g -O3 -Wall -DOSCL_IMPORT_REF= -DOSCL_UNUSED_ARG= -DOSCL_EXPORT_REF=
 ifeq ($(LINUX),1)
 OPTS += -DLINUX
 endif
