Got the new codec working.
Former-commit-id: 47c67c20d9226b2677156b4ab6511c0923809a23

--- a/H264Dec/Makefile
+++ b/H264Dec/Makefile
@@ -1,4 +1,4 @@
-OPTS = -m32 -g -O3 -DH264DEC_TRACE -D_ERROR_PRINT -D_DEBUG_PRINT
+OPTS = -m32 -O3 # -DH264DEC_TRACE -D_ERROR_PRINT -D_DEBUG_PRINT -D_ASSERT_USED	
 ifeq ($(LINUX),1)
 OPTS += -DLINUX
 endif
