Reorganized code, made codec run in a web worker, playing from .mp4 files works now, old player is broken, use test.html until I get broadway.html working again.
Former-commit-id: f5ae3ff10e769b9f9e65e83f3ec8ec26a7542966
Former-commit-id: a019646f9877853e7cf65d11bc4bc6ac474b8ceb

--- a/Decoder/Makefile
+++ b/Decoder/Makefile
@@ -1,4 +1,4 @@
-OPTS = -m32 -g # -DH264DEC_TRACE -D_ERROR_PRINT -D_DEBUG_PRINT -D_ASSERT_USED	
+OPTS = -m32 -g # -DH264DEC_TRACE # -D_ERROR_PRINT -D_DEBUG_PRINT -D_ASSERT_USED	
 ifeq ($(LINUX),1)
 OPTS += -DLINUX
 endif
@@ -49,8 +49,8 @@ SRCS := \
     source/h264bsd_pic_order_cnt.c \
     source/h264bsd_decoder.c \
     source/H264SwDecApi.c \
-    source/BroadwayEx.c
-    
+    source/Decoder.c
+
 OBJS    = $(patsubst $(SRCDIR)/%.c,$(OBJDIR)/%.o,$(SRCS))
 
 # Targets
